packages/taquito-michel-codec/test/contracts_011/ill_typed/view_toplevel_lazy_storage_input.tz
parameter unit;
storage nat;
code { FAIL };
view "map" (big_map string nat) unit { DROP; UNIT;};
